# ttr-ga

./: README.md  pyproject.toml  test_gameplay.py
src/ttr_ga/: board.py  common.py  game.py  player.py
src/ttr_ga/agents/: agent.py
src/ttr_ga/utils/: state.py
tests/: test_board.py  test_deck.py  test_scoring.py
